# backvault

./: .dockerignore  .env-example  .gitignore  .gitmodules  AGENTS.md  BUILD.md  Dockerfile  README.md  SECURITYASSESS.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh
.github/: CONTRIBUTING.md  FUNDING.yml  SETUP.md
.github/workflows/: bandit.yml  ci.yml  docker-publish.yml  e2e.yml  hadolint.yml  opencode.yml  release.yml  security-scan.yml  test.yml  trivy.yml
src/: bw_client.py  db.py  form.html  init.py  run.py  utils.py
tests/: README.md  docker_test.sh  test_bw_client.py  test_cli_integration.py  test_db.py  test_e2e.py  test_init.py  test_run.py  test_run_sh.py
